Event notifications moved to separate source file

--- a/HID PnP Demo.csproj
+++ b/HID PnP Demo.csproj
@@ -96,6 +96,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form1_EventNotification.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="hid.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
