Solution cleaned up and renamed. Project moved to subfolder, cleaned up and renamed as well.

--- a/WindowsForms/HidDemoWindowsForms.csproj
+++ b/WindowsForms/HidDemoWindowsForms.csproj
@@ -93,16 +93,15 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\hid.cs">
+      <Link>hid.cs</Link>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1_EventNotification.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="hid.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
